2001-03-23  Almer S. Tigelaar  <almer@gnome.org>

	* names.glade: Set visibility to NO, this solves the ugly
	flickering that occured.

2001-03-22  Morten Welinder  <terra@diku.dk>

	* search-replace.glade: Work around libglade bug.  (Having
 	identical widget names in different dialogs does not work.)

2001-03-21  Zbigniew Chyla  <cyba@gnome.pl>

	* dialog-plugin-manager.c
	(plugin_compare_name): New function
	(update_plugin_manager_view): Sorting plugin list.

2001-03-18  Almer S. Tigelaar  <almer@gnome.org>

	* validate.glade : Polish.
	
	* dialog-validate.c :
	(cb_set_constraint_type_deactive) : Also de-activate labels and clean-up a bit.
	(cb_input_flag_toggled) : clean-up.
	(cb_error_flag_toggled) : idem.
	(setup_widgets) : Initialize some new widgets added to validate.glade
	(connect_signals) : Add signal for error_action.
	(cb_error_action_deactivate) : New, the signal handler for error_action,
	will load a pixmap representating the action to be taken.
	(dialog_validate) : Initialize the error_action pixmap by calling the
	cb_error_action_deactivate callback.

2001-03-17  Jody Goldberg <jgoldberg@home.com>

	* Release 0.64

2001-03-16  Zbigniew Chyla  <cyba@gnome.pl>

	* src/dialogs/dialog-plugin-manager.c
	(update_plugin_details_view): Always clear extra info CList.
	(update_plugin_details_view): Don't enable/disable plugin details
	notebook page here.
	(cb_pm_clist_row_selected): Do it here...
	(cb_pm_clist_row_unselected): ... here
	(update_plugin_manager_view): ... and here

2001-03-11  Jody Goldberg <jgoldberg@home.com>

	* dialog-cell-sort.c (dialog_cell_sort_ok) : sneaky.  To avoid
	  freeing the range multiple times or leaking copy it here.

2001-03-08  Jody Goldberg <jgoldberg@home.com>

	* dialog-solver.c (constr_change_click) : move selected_row into the
	  state variable.  The static was bogus.
	(constr_delete_click) : Use the selected_row in the state variable and
	  clear it when things are deleted.  Why do we even need this ??