@@ -372,7 +372,7 @@
 
 	    <widget>
 	      <class>GtkEntry</class>
-	      <name>value</name>
+	      <name>expr_text</name>
 	      <can_focus>True</can_focus>
 	      <editable>True</editable>
 	      <text_visible>True</text_visible>
